--- a/config/GAMEID/config.yml
+++ b/config/GAMEID/config.yml
@@ -1,9 +1,9 @@
 # See config.example.yml for documentation.
-object_base: orig/GAMEID
+object_base: orig/RFNE01
 object: sys/main.dol
 hash: 0123456789abcdef0123456789abcdef01234567
-symbols: config/GAMEID/symbols.txt
-splits: config/GAMEID/splits.txt
+symbols: config/RFNE01/symbols.txt
+splits: config/RFNE01/splits.txt
 # Change this to match the linker version.
 # See config.example.yml for a list.
 mw_comment_version: 11
